make sure to update the z-index

--- a/henry-nunez-portfolio/src/app/components/Contact/styles.css
+++ b/henry-nunez-portfolio/src/app/components/Contact/styles.css
@@ -4,7 +4,7 @@
   --cadetGray: #7d99a9;
   --atomicTangerine: #e39172;
   --candyAppleRed: #f33721;
-  --vermilion: #fd3938;
+  --imperialRed: #f53948;
   --darkerBlack: #030201;
   --myrtleGreen: #267675;
   --white: #fff;
@@ -30,29 +30,54 @@
 
   .contact_body {
     text-align: center;
-    border-radius: 10px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
     background-color: rgba(0, 0, 0, 0.3);
-    border: 4px solid var(--darkerBlack);
+    border: 2px solid var(--darkerBlack);
     padding: 20px 10px;
+    background-image: url("/call_me.jpeg");
+    background-size: cover;
+    background-position: center;
+    position: relative;
+  }
+  .contact_body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.65);
+    z-index: 1;
   }
   .contact_body h2 {
     margin-bottom: 20px;
     padding-top: 10px;
     text-align: center;
     font-size: 1.5rem;
-    text-shadow: -2px 2px var(--cerulean);
+    position: relative;
+    z-index: 2;
+    font-family: "Impact", sans-serif;
+    font-weight: bold;
+    text-rendering: optimizeLegibility;
+    color: var(--imperialRed);
+    letter-spacing: 0.04em;
   }
   .contact_body label {
     display: flex;
     flex-direction: column;
     text-align: left;
-    color: var(--white);
+    color: var(--imperialRed);
     background-color: var(--darkerBlack);
     font-size: 1rem;
-    border-radius: 13px;
-    border: 2px solid var(--white);
+    font-family: "Impact", sans-serif;
+    font-weight: bold;
+    text-rendering: optimizeLegibility;
     margin-bottom: 5px;
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+    box-shadow: 0 4px 30px rgba(255, 255, 255, 0.5),
+      0 15px 20px rgba(0, 0, 0, 0.2);
+    position: relative;
+    z-index: 2;
+    letter-spacing: 0.04em;
   }
   .contact_body span {
     margin-left: 5px;
@@ -61,8 +86,7 @@
   .contact_body input,
   .contact_body textarea {
     margin-top: 5px;
-    border-radius: 10px;
-    border: 4px solid var(--darkerBlack);
+    border: 2px solid var(--darkerBlack);
     color: var(--darkerBlack);
     padding: 5px;
     margin-bottom: 5px;
@@ -70,20 +94,28 @@
   .submit-button {
     padding: 10px;
     font-size: 1rem;
-    color: #fff;
-    background-color: var(--myrtleGreen);
-    border: none;
-    border-radius: 6px;
+    color: var(--imperialRed);
+    background-color: var(--darkerBlack);
+    border: 1px solid var(--imperialRed);
     cursor: pointer;
     transition: background-color 0.3s ease;
     width: 200px;
     margin: 20px 0;
     align-self: center;
+    font-family: "Impact", sans-serif;
+    font-weight: bold;
+    font-size: 1.18rem;
+    text-rendering: optimizeLegibility;
+    position: relative;
+    z-index: 2;
+    letter-spacing: 0.1em;
   }
 
   .submit-button:hover {
-    background-color: var(--cerulean);
+    background-color: var(--imperialRed);
+    color: var(--darkerBlack);
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+    border: 1px solid var(--darkerBlack);
   }
 
   .success-message {
