--- a/henry-nunez-portfolio/src/app/components/Skills/styles.css
+++ b/henry-nunez-portfolio/src/app/components/Skills/styles.css
@@ -8,7 +8,7 @@
   --cadetGray: #7d99a9;
   --atomicTangerine: #e39172;
   --candyAppleRed: #f33721;
-  --vermilion: #fd3938;
+  --imperialRed: #f53948;
   --darkerBlack: #030201;
   --myrtleGreen: #267675;
   --white: #fff;
